@@ -1,5 +1,5 @@
 .\" Text automatically generated by txt2man
-.TH TURN 1 "24 February 2014" "" ""
+.TH TURN 1 "26 March 2014" "" ""
 .SH GENERAL INFORMATION
 
 The \fBTURN Server\fP project contains the source code of a TURN server and TURN client 
@@ -554,8 +554,9 @@ that other mode is dynamic. Multiple shared secrets can be used
 .B
 \fB\-s\fP, \fB\-\-max\-bps\fP
 Max bytes\-per\-second bandwidth a TURN session is allowed to handle
-(input and output network streams combined). Anything above that limit
-will be dropped.
+(input and output network streams are treated separately). Anything above 
+that limit will be dropped or temporary suppressed (within the
+available buffer limits).
 .TP
 .B
 \fB\-\-cert\fP
