@@ -396,8 +396,10 @@ static char Usage[] = "Usage: turnserver [options]\n"
 " -r, --realm			<realm>		Realm, for long-term credentials and for TURN REST API.\n"
 " -q, --user-quota		<number>	Per-user allocation quota: how many concurrent allocations a user can create.\n"
 " -Q, --total-quota		<number>	Total allocations quota: global limit on concurrent allocations.\n"
-" -s, --max-bps			<number>	Max bytes-per-second bandwidth a TURN session is allowed to handle.\n"
-"						(input and output network streams combined).\n"
+" -s, --max-bps			<number>	Max bytes-per-second bandwidth a TURN session is allowed to handle\n"
+"									(input and output network streams are treated separately). Anything above\n"
+"									that limit will be dropped or temporary suppressed (within "
+"									the available buffer limits).\n"
 " -c				<filename>	Configuration file name (default - turnserver.conf).\n"
 " -b, --userdb			<filename>	User database file name (default - turnuserdb.conf) for long-term credentials only.\n"
 #if !defined(TURN_NO_PQ)
